--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,12 +8,15 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".activities.LoginActivity" >
 
-    <Button
-        android:layout_width="match_parent"
+
+    <ImageButton
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_margin="20dp"
-        android:onClick="loginToRest"
-        android:text="@string/login_label" />
+        android:scaleType="fitXY"
+        android:background="@android:color/white"
+        android:src="@drawable/signintwitter"
+        android:onClick="loginToRest"/>
 
 </RelativeLayout>
