--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -1,10 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
-    <item android:id="@+id/action_compose"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".activities.TimelineActivity">
+   <item android:id="@+id/action_compose"
         android:icon="@drawable/pen"
         android:title="tweet"
+        app:showAsAction="ifRoom"/>
+    <item android:id="@+id/action_signout"
+        android:orderInCategory="100"
+        android:title="Sign out">
+    </item>
+    <item android:id="@+id/action_profile"
+        android:orderInCategory="100"
+        android:icon="@drawable/profile"
+        android:title="View Profile"
         app:showAsAction="ifRoom"/>
 
 </menu>
