--- a/app/src/main/res/layout/fragment_compose.xml
+++ b/app/src/main/res/layout/fragment_compose.xml
@@ -1,29 +1,47 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context="com.codepath.apps.twitterdemo.fraqments.ComposeFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_margin="2dp">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <ImageView
+            <ImageButton
+                android:layout_width="52dp"
+                android:layout_height="52dp"
+                android:scaleType="fitXY"
+                android:id="@+id/ibtnClose"
+                android:layout_alignParentLeft="true"
+                android:src="@drawable/ic_clear_black_48dp"
+                android:background="@android:color/white"/>
+            <com.makeramen.roundedimageview.RoundedImageView
+                app:riv_corner_radius="5dip"
                 android:layout_width="52dp"
                 android:layout_height="52dp"
                 android:scaleType="fitXY"
                 android:id="@+id/ivAvatar"
-                android:layout_alignLeft="@+id/tvName"/>
+                android:layout_alignParentRight="true" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
+                android:layout_toLeftOf="@+id/ivAvatar"
                 style="@style/user_name"
                 android:id="@+id/tvName"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toLeftOf="@+id/ivAvatar"
+                android:layout_below="@+id/tvName"
+                android:id="@+id/tvScreenName"/>
         </RelativeLayout>
         <LinearLayout
             android:orientation="vertical"
@@ -49,6 +67,7 @@
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:text="Large Text"
                     android:id="@+id/tvCountLength"
+                    android:layout_margin="2dp"
                     android:layout_toLeftOf="@+id/btnTweet"/>
 
                 <Button
@@ -56,6 +75,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/btnTweet"
                     android:id="@+id/btnTweet"
+                    android:background="#48a2df"
+                    android:layout_margin="2dp"
                     android:layout_alignParentRight="true"
                     />
             </RelativeLayout>
