--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,6 +23,10 @@
     <style name="user_name">
         <item name="android:textColor">@android:color/black</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:padding">2dp</item>
+    </style>
+    <style name="screen_name">
+        <item name="android:padding">2dp</item>
     </style>
 
     <style name="timeline_content">
